--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -109,6 +109,7 @@ upper_test <- my_t.test(my_gapminder$lifeExp, alternative = "greater", mu = 60)
 
 Thus the p value of this test is `r upper_test$p_val`. This is greater than our pre-determined cut-off of 0.05, so we conclude that the result isn't statistically significant. Therefore, we don't reject null hypothesis $H_0$.
 
+
 ## Tutorial for `my_lm`
 
 To demonstrate a regression, we use `lifeExp` as response variable and `gdpPercap` and `continent` as explanatory variables using the following code:
@@ -149,9 +150,20 @@ ggplot(my_df, aes(x = fitted, y = actual, color = continent)) +
 
 From the graph, we could see the trends of Europe and Oceania are fit with the line whereas the others aren't. This implies the model we used is good for Europe and Oceania, but for other continent we probably need other models.
 
+
 ## Tutorial for `my_knn_cv` using `my_penguins`
 
-Predict output class `species` using covariates `bill_length_mm`, `bill_depth_mm`, `flipper_length_mm`, and `body_mass_g` use 5-fold cross validation (`k_cv = 5`).
+In this part, we will demonstrate function `my_knn_cv` by predicting output class `species` using covariates `bill_length_mm`, `bill_depth_mm`, `flipper_length_mm`, and `body_mass_g` through k-fold cross validation.
+
+In general, the process of k-fold cross-validation is as follows:
+
+1. Split data into k parts (folds)
+2. Use all but 1 fold as training data and fit the model
+3. Use the remaining fold for test data and make predictions
+4. Switch which fold is test data and repeat steps 2 and 3 until all folds have been test data (k times)
+5. Compute squared error
+
+The following code uses `my_knn_cv` in the package to perform 5-fold cross-validation (`k_cv = 5`).
 
 ``` {r}
 data <- na.omit(my_penguins)
@@ -173,12 +185,19 @@ my_knn_result <- data.frame("k_nn" = 1:10,
 kable_styling(kable(my_knn_result))
 ```
 
+From 5-fold cross-validation, we have the prediction and could calculate misclassification rates.
+
 Based on training misclassification rates, I would choose `k_nn = 1` because the value is the smallest which is 0.
 And based on CV misclassification rates, I still would choose `k_nn = 1` because the value is again the smallest.
 
-Therefore, in practice I would choose `k_nn = 1` because both training and cross-validation has the minimum test error at `k_nn = 1`.
+Therefore, in practice I would choose `k_nn = 1` because both training and cross-validation identifies `k_nn = 1` with the minimum test error.
+
 
 ## Tutorial for `my_rf_cv`
+
+In this part, we will predict `body_mass_g` using covariates `bill_length_mm`, `bill_depth_mm`, and `flipper_length_mm` through k-fold cross-validation.
+
+The following code use function `my_rf_cv` to get the cross-validation estimate of our test error.
 
 ``` {r, fig.width=6.8, fig.height=6}
 cv_num <- matrix(NA, 30, 3)
@@ -189,7 +208,7 @@ a <- 1
 for (i in c(2, 5, 10)) {
   # For each value of k, run function 30 times
   for (j in 1:30) {
-    # Call my function tp get CV estimated MSE
+    # Call my function to get CV estimated MSE
     cv_num[j, a] <- my_rf_cv(i)
   }
   sd_cv[a] <- sd(cv_num[, a])
@@ -215,8 +234,8 @@ cv_table <- data.frame("mean" = colMeans(cv_num),
 kable_styling(kable(cv_table))
 ```
 
-From the boxplot graph, we could see as `k` increases, the cross-validation error's median decreases and width decreases.
+From the boxplot graph, we could see as `k` increases, the test error's median decreases and width of box decreases.
 
-Also, from the table, we could see as `k` increases, the cross-validation error's mean decreases and the standard deviation decreases.
+Also, from the table, we could see as `k` increases, the test error's mean decreases and the standard deviation decreases.
 
-Those two indicates the same thing -- as `k` increases, test is more accurate. This makes sense since the rule of thumb, `k = 5` and `k = 10` tend to result in an ideal balance in terms of the bias-variance tradeoff.
+Those two indicates the same thing -- as `k` increases or `k = 10`, test has less variance and less bias. This makes sense as the rule of thumb, `k = 5` and `k = 10` usually tend to result in an ideal balance in terms of the bias-variance tradeoff.
